more footer styling changes. Need to fix spacing with ul's

--- a/css/style.css
+++ b/css/style.css
@@ -160,6 +160,18 @@ footer {
      list-style: none;
 }
 
+.social-media li,
+.footer-list li {
+     float: left;
+     padding: 0 15px 15px 15px;
+}
+
+.footer-heading {
+     margin: 0;
+     padding-top: 5px;
+     clear: both;
+}
+
 .footer-link {
      color: white;
      text-decoration: none;
